--- a/memo.css
+++ b/memo.css
@@ -1,4 +1,8 @@
-
+html {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica
+                Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji
+                Apple Chancery;
+}
 .sec-main {
   width: 900px;
   height: 520px;
