--- a/pingpong.css
+++ b/pingpong.css
@@ -1,3 +1,8 @@
+html {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica
+                Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji
+                Apple Chancery;
+}
 body {
   text-align: center;
 }
