--- a/todolist.css
+++ b/todolist.css
@@ -1,3 +1,9 @@
+html {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica
+                Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji
+                Apple Chancery;
+}
+
 .first {
     margin: auto;
     background-color: rgb(102, 103, 171);
